<resources>
    <string name="app_name">FireBase_test</string>
    <string name="signed_in_fmt">test</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="db_button_text">DB</string>
    <string name="gallery_button_text">Gallery</string>
    <string name="cal_button_text">Calendar</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps_button_text">Map View</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="calendarDateDisp">Date</string>
    <string name="tvCalendarDayDisp">Day </string>
    <string name="tvCalendarEventDisp">Event</string>


    <string name="hello">Hello World, PhotoIntentActivity!</string>

    <string name="btnIntend">Take (big) Picture</string>
    <string name="btnIntendS">Take (small) Picture</string>
    <string name="btnIntendV">Take Video</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
</resources>
