<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jj8.firebase_test.MainActivity">


    <Button
        android:text="@string/action_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/sign_out_button"/>

    <Button
        android:text="@string/gallery_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gallery_button"
        android:layout_alignBaseline="@+id/cal_button"
        android:layout_alignBottom="@+id/cal_button"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/cal_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cal_button"
        android:layout_above="@+id/Db_button"
        android:layout_alignStart="@+id/Db_button"
        android:layout_marginBottom="43dp"/>

    <Button
        android:text="@string/db_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Db_button"
        android:layout_above="@+id/sign_out_button"
        android:layout_alignStart="@+id/sign_out_button"
        android:layout_marginBottom="40dp"/>

    <Button
        android:text="@string/maps_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/maps_button"
        android:layout_below="@+id/cal_button"
        android:layout_alignEnd="@+id/gallery_button"
        android:layout_marginEnd="19dp"
        android:layout_marginTop="8dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="CAMERA"
        android:id="@+id/camera"
        android:layout_alignEnd="@+id/Db_button"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="View Gallery"
        android:id="@+id/ViewGalleryButton"
        android:layout_above="@+id/gallery_button"
        android:layout_marginBottom="66dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Gallery"
        android:id="@+id/GalleryButton"
        android:layout_above="@+id/ViewGalleryButton"
        android:layout_alignParentStart="true"/>

</RelativeLayout>
