<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout -->
<!--android:orientation="vertical"-->
<!--android:layout_width="wrap_content"-->
<!--android:layout_height="wrap_content">-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lstdateview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvlstCalendarDateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:hint="@string/calendarDateDisp"
            android:padding="10dp"
            />

        <TextView
            android:id="@+id/tvlstCalendarDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvlstCalendarDateId"
            android:layout_marginLeft="10dp"
            android:hint="@string/tvCalendarDayDisp"
            android:padding="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvlstCalendarEventId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/lstdateview"
        android:hint="@string/tvCalendarEventDisp"
        android:padding="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        />
</RelativeLayout>
    <!--</LinearLayout>-->