<?xml version="1.0" encoding="utf-8"?>
<!--<LinearLayout -->
              <!--android:orientation="vertical"-->
              <!--android:layout_width="wrap_content"-->
              <!--android:layout_height="wrap_content">-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dateview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorAccent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/tvCalendarDateId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:hint="@string/calendarDateDisp"
            android:background="@color/white"
            />
        <TextView
            android:id="@+id/tvCalendarDay"
            android:layout_below="@id/tvCalendarDateId"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/tvCalendarDayDisp"/>
        </LinearLayout>
        <TextView
            android:id="@+id/tvCalendarEventId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/dateview"
            android:hint="@string/tvCalendarEventDisp"
            android:padding="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            />
    </RelativeLayout>
<!--</LinearLayout>-->